# dj4-Home

./: .gitignore  pyproject.toml
app/: config.py  settings.py
app/app/: settings.py  urls.py
app/carts/: admin.py  apps.py  mixins.py  models.py  urls.py  utils.py  views.py
app/carts/migrations/: 0001_initial.py
app/carts/templatetags/: carts_tags.py
app/common/: mixins.py
app/goods/: admin.py  models.py  urls.py  utils.py  views.py
app/goods/migrations/: 0001_initial.py  0002_alter_categories_options_alter_categories_name_and_more.py
app/goods/templates/goods/: catalog.html  product.html
app/goods/templatetags/: goods_tags.py
app/main/: urls.py  views.py
app/main/templates/main/: about.html  base.html  index.html
app/orders/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/orders/migrations/: 0001_initial.py
app/templates/: base.html
app/templates/carts/includes/: included_cart.html
app/templates/goods/: catalog.html  product.html
app/templates/includes/: cart_button.html  notifications.html
app/templates/main/: about.html  index.html
app/templates/orders/: create_order.html
app/templates/users/: login.html  profile.html  registration.html  users_cart.html
app/users/: admin.py  forms.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
