[project]
name = "dj4-home"
version = "0.1.0"
description = ""
authors = [
    {name = "vavlxxx",email = "vladimir.nefedov357@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "ruff (>=0.12.10,<0.13.0)",
    "pyright (>=1.1.404,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]

[tool.pyright]
